--- a/main.css
+++ b/main.css
@@ -80,18 +80,59 @@
     }
 
     .qui-aside {
-        height: 800px;
+        position: absolute;
+        top: 23px;
+        left: 120px;
+        height: 885px;
         width: 200px;
         border: 1px solid black;
         background-color: #2d3741;
-        float: left;
     }
-    .nav-aside a{
+
+    .qui-footer{
+        /* border: 1px solid red; */
+
+        line-height: 20px;
+        text-align: center;
+        height: 40px;
+
+        margin-left: 11px;
+
+        background-color: sandybrown;
+
+    }
+
+    .qui-footer span{
+        margin-left: 50px;
+
+    }
+    .qui-footer a{
+        text-decoration: none;
+        color: #444;
+        line-height: 50px;
+        margin-left: 30px;
+
+    }
+
+    .nav-aside {
+        padding: 80px 10px;
+    }
+
+    .nav-aside a {
         font-size: 16px;
         color: #ce1d5c;
         text-decoration: none;
+        line-height: 44px;
+        padding-left: 20px;
+        display: block;/*元素显示为块级元素*/
     }
-    ul{
-        list-style: none;
 
+    .nav-aside a:hover {
+        color: white;
+        background-color: teal;
+    }
+
+    ul {
+        list-style: none;
+        /* 去黑点 */
     }
